--- a/DI/DI/SOLID.csproj
+++ b/DI/DI/SOLID.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyInversion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheOpenClosedPrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
