--- a/DI/DI/SOLID.csproj
+++ b/DI/DI/SOLID.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DependencyInversion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheInterfaceSegregationPrinciple.cs" />
     <Compile Include="TheOpenClosedPrinciple.cs" />
   </ItemGroup>
   <ItemGroup>
