--- a/DI/DI/SOLID.csproj
+++ b/DI/DI/SOLID.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="D\DependencyInversion.cs" />
     <Compile Include="I\FatInterface.cs" />
+    <Compile Include="I\GoodDisignMustBeSOLID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="I\TheInterfaceSegregationPrinciple.cs" />
