--- a/DI/DI/SOLID.csproj
+++ b/DI/DI/SOLID.csproj
@@ -45,6 +45,7 @@
     <Compile Include="D\StrongCoupling.cs" />
     <Compile Include="I\FatInterface.cs" />
     <Compile Include="I\GoodDisignMustBeSOLID.cs" />
+    <Compile Include="L\LiskovSubstitution.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="I\TheInterfaceSegregationPrinciple.cs" />
