--- a/DI/DI/SOLID.csproj
+++ b/DI/DI/SOLID.csproj
@@ -46,6 +46,7 @@
     <Compile Include="I\FatInterface.cs" />
     <Compile Include="I\GoodDisignMustBeSOLID.cs" />
     <Compile Include="L\LiskovSubstitution.cs" />
+    <Compile Include="L\RectangleExample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="I\TheInterfaceSegregationPrinciple.cs" />
