--- a/DI/BowlingTests/BowlingTests.csproj
+++ b/DI/BowlingTests/BowlingTests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FrameTest.cs" />
+    <Compile Include="GameTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThrowTest.cs" />
   </ItemGroup>
