--- a/DI/RefactoringByMartin/RefactoringByMartin.csproj
+++ b/DI/RefactoringByMartin/RefactoringByMartin.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GeneratePrimesTest.cs" />
+    <Compile Include="GeneratePrimes2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
