--- a/DI/packages/repositories.config
+++ b/DI/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AsynchronousLogger\packages.config" />
   <repository path="..\Bowling\packages.config" />
   <repository path="..\BowlingTests\packages.config" />
   <repository path="..\RefactoringByMartin\packages.config" />
