--- a/DI/AsynchronousLogger/AsynchronousLogger.csproj
+++ b/DI/AsynchronousLogger/AsynchronousLogger.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4B6A2CA-B016-4A78-AFA1-1D42816A62C3}</ProjectGuid>
+    <ProjectGuid>{A53B7140-EE79-44EF-9ED7-794A329916FD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BowlingTests</RootNamespace>
-    <AssemblyName>BowlingTests</AssemblyName>
+    <RootNamespace>AsynchronousLogger</RootNamespace>
+    <AssemblyName>AsynchronousLogger</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,19 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FrameTest.cs" />
-    <Compile Include="GameTest.cs" />
+    <Compile Include="AsynchronousLogger.cs" />
+    <Compile Include="AsynchronousLoggerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThrowTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Bowling\Bowling.csproj">
-      <Project>{b36b9f9d-78cd-421c-bec4-a152b3549fb9}</Project>
-      <Name>Bowling</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
